# fast-api-template

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/config/: env.py
app/controllers/: nlp.py
app/db/: redis.py
app/ml/models/: language_model.py
app/services/: nlp.py
app/utils/: exceptions.py  request_body.py
