[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = "Template repository for quickly building python applications with FastAPI"
authors = ["Brendan Moriarity <brendanmoriarity@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "fast_api_template"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.28.1"
fastapi = "^0.83.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
redis = "^4.3.4"
spacy = "^3.4.1"
scipy = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pylint = "^2.15.2"
black = "^22.8.0"

[tool.black]
line-length = 80
target-version= ['py37', 'py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
